--- a/style.css
+++ b/style.css
@@ -48,10 +48,18 @@ h1, h2, h3, h4, p {
     padding: 0;
     margin: 0;
     background-color: transparent;
-    margin-left: 24px;
     color: #000000;
+    height: 24px;
+    width: 24px;
+    display: flex;
+    align-items: center;
 }
 
+
+.navbar-button svg{
+    height: 20px;
+    width: 20px;
+}
 
 .name{
 width: auto;
@@ -194,6 +202,9 @@ display: block;
     margin-left: 4px;
     height: 48px;
     width: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
