--- a/style.css
+++ b/style.css
@@ -239,3 +239,36 @@ display: block;
     width: 24px;
     height: 24px;
 }
+
+
+.search{
+    width: 100%;
+    line-height: 24px;
+    font-size: 18px;
+    background-color: #000000;
+    color: #FFFFFF;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    border-radius: 8px;
+    padding: 12px 16px;
+    min-height: 56px;
+    cursor: pointer;
+    font-family: UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin-top: 16px;
+}
+
+
+.or-login{
+    font-weight: 500;
+    font-size: 14px;
+    font-family: UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin-top: 24px;
+}
+
+.or-login a{
+text-decoration: underline;
+cursor: pointer;
+}
