--- a/style.css
+++ b/style.css
@@ -272,3 +272,40 @@ display: block;
 text-decoration: underline;
 cursor: pointer;
 }
+
+
+.hamburger-container{
+    transition: 0.4s ease-in-out 0s;
+}
+
+.hamburger-menu-overlay{
+    display: none;
+	position: fixed;
+    flex-direction: column;
+    width: 250px;
+	height: 100%;
+    background-color: #FFFFFF;
+	z-index: 7;
+    font-family: UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    padding: 24px;
+    transition: 0.4s ease-in-out 0s;
+    opacity: 1;
+
+
+}
+
+.hamburger-background{
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(38, 38, 38, 0.8);
+    z-index: 6;
+    transition: 0.4s ease-in-out 0s;
+}
+
+
+
+.hamburger-text{
+
+}
