--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body{
     font-family: UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #000000;
+    overflow: scroll;
 }
 
 a{
@@ -19,6 +20,17 @@ h1, h2, h3, h4, p {
     font-weight: normal;
 }
 
+
+li {
+    display: block;
+}
+
+
+ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
 
 .navbar{
     background-color: #e0a353;
@@ -282,12 +294,16 @@ cursor: pointer;
     display: none;
 	position: fixed;
     flex-direction: column;
+    justify-content: space-between;
     width: 250px;
-	height: 100%;
+	height: 95%;
     background-color: #FFFFFF;
 	z-index: 7;
     font-family: UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    padding: 24px;
+    padding-top: 24px;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-bottom: 500px;
     transition: 0.4s ease-in-out 0s;
     opacity: 1;
 
@@ -307,5 +323,118 @@ cursor: pointer;
 
 
 .hamburger-text{
+    
+    min-height:calc(100vh - 72px);
+    justify-content: space-around;
+    flex-direction: column;
+    display: flex;
 
+}
+
+
+.hamburger-register{
+    background: #333333;
+    color: white;
+    border-radius: 8px;
+    padding: 12px 16px;
+    min-height: 56px;
+    font-size: 18px;
+    line-height: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    cursor: pointer;
+    font-weight: 500;
+    box-sizing: border-box;
+    font-family: UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin-bottom: 8px;
+}
+
+.hamburger-login{
+    background: #EEEEEE;
+    border-radius: 8px;
+    padding: 12px 16px;
+    min-height: 56px;
+    font-size: 18px;
+    line-height: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    cursor: pointer;
+    font-weight: 500;
+    box-sizing: border-box;
+    font-family: UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+}
+
+.hamburger-info{
+    display: flex;
+    margin-top: 24px;
+    margin-bottom: 24px;
+    flex-direction: column;
+
+}
+
+.hamburger-create{
+    margin-bottom: 16px;
+}
+
+
+.hamburger-create a{
+    margin: 12px 0;
+    line-height: 16px;
+    font-weight: 500;
+    font-size: 15px;
+}
+
+.hamburger-ubereats{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hamburger-ubereats img{
+    width: 56px;
+    border-radius: 15%;
+    height: 56px;
+    flex: none;
+    margin-right: 16px;
+}
+
+.hamburger-ubereats p{
+    line-height: 20px;
+    font-size: 16px;
+    font-weight: 500;
+
+
+}
+
+
+.hamburger-phone{
+    margin-bottom: 34px;
+    margin-top: 16px;
+    display: flex;
+    align-items: center;
+}
+
+.hamburger-mobile{
+    padding: 12px;
+    background-color: #EEEEEE;
+    border-radius: 500px;
+    display: flex;
+    align-items: center;
+    line-height: 16px;
+    font-weight: 500;
+    font-size: 14px;
+}
+
+.hamburger-mobile svg{
+    height: 16px;
+    width: 16px;
+    fill: currentColor;
+    flex: none;
+    color: #000000;
+    margin-right: 8px;
 }
