added images to services-section

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 	font-family: UberMoveText, system-ui, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	color: #000000;
 	overflow: scroll;
-    overflow-x: hidden;
+	overflow-x: hidden;
 }
 
 a {
@@ -164,8 +164,11 @@ button {
 }
 
 .delivery-address {
+	cursor: pointer;
 	padding: 8px 0;
 	display: block;
+	position: sticky;
+	z-index: 6;
 }
 
 .delivery-address-field {
@@ -194,6 +197,7 @@ button {
 
 .delivery-now {
 	background-color: #ffffff;
+	cursor: pointer;
 }
 
 .delivery-now-field {
@@ -616,7 +620,7 @@ button {
 
 .services-section {
 	padding: 48px 0 0 0;
-    position: relative;
+	position: relative;
 	left: 0;
 	top: 856px;
 	z-index: 100;
@@ -642,38 +646,74 @@ button {
 	width: 64px;
 }
 
-.download-app-logo p{
-margin-left: 16px;
-line-height: 28px;
-font-size: 24px;
-font-weight: 700;
+.download-app-logo p {
+	margin-left: 16px;
+	line-height: 28px;
+	font-size: 24px;
+	font-weight: 700;
 }
 
-.download-app-button{
-    background-color: #eeeeee;
-    border-radius: 8px;
-    padding: 12px 16px;
-    min-height: 56px;
-    font-size: 18px;
-    line-height: 24px;
-    font-weight: 500;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.download-app-button {
+	background-color: #eeeeee;
+	border-radius: 8px;
+	padding: 12px 16px;
+	min-height: 56px;
+	font-size: 18px;
+	line-height: 24px;
+	font-weight: 500;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
-.download-app-button-items{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.download-app-button-items {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
-.download-app-button-items svg{
-    height: 18px;
-    width: 18px;
+.download-app-button-items svg {
+	height: 18px;
+	width: 18px;
 }
 
-.download-app-button-items label{
-    margin-left: 8px;
+.download-app-button-items label {
+	margin-left: 8px;
+}
+
+.more-sections {
+	margin-top: 48px;
+	margin-left: 16px;
+	margin-right: 16px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+
+.more-sections-images {
+	height: auto;
+	margin-bottom: 4px;
+	width: 100%;
+}
+
+.more-sections-p1 {
+	line-height: 32px;
+	font-size: 22px;
+	font-weight: 700;
+}
+
+.more-sections-p2 {
+	margin-top: 8px;
+	text-decoration: underline;
+	line-height: 20px;
+	font-size: 16px;
+	display: block;
+	cursor: pointer;
+	font-weight: 500;
+}
+
+.more-sections-space {
+	margin-top: 36px;
 }
