--- a/style.css
+++ b/style.css
@@ -850,3 +850,23 @@ position: relative;
 .other-options-text p{
 	margin-left: 8px;
 }
+
+.mini-icons{
+
+	margin-bottom: 40px;
+	
+	padding-top: 40px;
+	border-top: 2px solid #E2E2E2;
+	display: flex;
+	flex-direction: row;
+}
+
+.mini-icons svg{
+	height: 16px;
+	width: 16px;
+
+}
+
+.mini-icons-gap{
+margin-right: 24px;
+}
