--- a/style.css
+++ b/style.css
@@ -870,3 +870,24 @@ position: relative;
 .mini-icons-gap{
 margin-right: 24px;
 }
+
+.other-options-documents{
+	line-height: 20px;
+	font-size: 14px;
+	margin-bottom: 16px;
+}
+
+
+.documents-text{
+	line-height: 20px;
+	font-weight: normal;
+	font-size: 14px;
+	margin-bottom: 16px;
+	display: flex;
+}
+
+.politics{
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 40px;
+}
