--- a/style.css
+++ b/style.css
@@ -163,14 +163,7 @@ button {
 	margin-bottom: 24px;
 }
 
-.delivery-address-fixed{
-	display: none;
-	height: 72px;
-	z-index: 3;
-	top: 0px;
-	left: 0px;
-	width: 100%;
-}
+
 
 .delivery-address {
 	position: sticky;
@@ -178,6 +171,7 @@ button {
 	padding: 8px 0;
 	display: block;
 	z-index: 3;
+
 }
 
 .delivery-address-field {
@@ -187,7 +181,49 @@ button {
 	background-color: #ffffff;
 	display: flex;
 	align-items: center;
+	top: 0;
 }
+
+.delivery-active{
+cursor: pointer;
+position: sticky;
+top: 0px;
+left: 0px;
+height: 72px;
+background-color: #FFFFFF;
+padding-left: 16px;
+padding-right: 16px;
+z-index: 100;
+box-shadow: rgb(226, 226, 226) 0px 0px 10px;
+display: flex;
+align-items: center;
+
+}
+
+.field-active{
+	position: sticky;
+	padding-left: 4px;
+	height: 56px;
+	background-color: rgb(238, 238, 238);
+	width: 100%;
+	display: flex;
+	align-items: center;
+	top: 0;
+}
+
+.fixed-active{
+
+	height: 72px;
+	z-index: 100;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+
+}
+
+
+
 
 .delivery-address-icon {
 	margin: 12px;
@@ -447,7 +483,7 @@ button {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 6;
+	z-index: 110;
 	color: #000000;
 	padding: 64px 16px 0px;
 	box-sizing: border-box;
@@ -632,7 +668,7 @@ button {
 	position: relative;
 	left: 0;
 	top: 856px;
-	z-index: 100;
+	z-index: 70;
 }
 
 .download-app {
