--- a/style.css
+++ b/style.css
@@ -68,46 +68,55 @@ button {
 	background-color: transparent;
 	color: #000000;
 	height: 24px;
-	width: 24px;
 	display: flex;
 	align-items: center;
 }
 .navbar-button svg {
 	height: 20px;
 	width: 20px;
+	align-items: unset;
 }
 .name {
 	width: auto;
 	height: 20px;
-	margin-left: 24px;
+	margin-left: 28px;
 	display: block;
 }
-.spacer {
-	flex: 1;
-}
+
 .login {
 	background-color: #ffffff;
 	white-space: nowrap;
 	height: 36px;
 	padding: 12px 12px;
-	display: inline-flex;
+	display: flex;
 	border-radius: 500px;
-	line-height: 16px;
 	font-weight: 500;
 	font-size: 14px;
-	font-family: UberMoveText, system-ui, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	width: 40px;
 	color: #000000;
 	box-sizing: border-box;
 	align-items: center;
+	justify-content: flex-start;
 }
+
 .login svg {
 	height: 16px;
 	width: 16px;
 	fill: currentColor;
 }
+.login-text{
+	visibility: hidden;
+	width: 0;
+	font-weight: 500;
+}
+.log-register{
+	display: flex;
+	position: absolute;
+	right: 0;
+	align-items: center;
+}
 .register {
 	display: inline-flex;
-	right: 0;
 	padding: 12px 12px;
 	background-color: #000000;
 	color: #ffffff;
@@ -121,6 +130,9 @@ button {
 	justify-content: center;
 	align-items: center;
 	line-height: 16px;
+}
+.register:hover{
+	background-color: #333333;
 }
 .main-background {
 	position: absolute;
@@ -810,4 +822,43 @@ button {
 	display: flex;
 	flex-direction: column;
 	margin-bottom: 40px;
+}
+
+
+
+@media (min-width: 1200px){
+	.name{
+		height: 24px;
+		width: auto;
+		margin-left: 36px;
+	}
+
+	.space{
+		padding: 0 40px;
+	}
+
+	.register{
+		padding: 12px 16px;
+		min-height: 48px;
+		font-size: 17px;
+		white-space: nowrap;
+		width: auto;
+	}
+	.login{
+		min-height: 48px;
+		font-size: 16px;
+		width: auto;
+		padding: 12px 16px;
+	}
+
+	.login svg{
+		width: 20px;
+		height: 20px;
+	}
+
+	.login-text{
+		margin-left: 4px;
+		visibility: visible;
+		width: auto;
+	}
 }
