--- a/style.css
+++ b/style.css
@@ -141,6 +141,9 @@ button {
 	right: 0;
 	bottom: 0;
 }
+.main-background-full{
+	visibility: hidden;
+}
 .main-content {
 	top: 30px;
 	padding: 0 16px;
@@ -860,5 +863,20 @@ button {
 		margin-left: 4px;
 		visibility: visible;
 		width: auto;
+	}
+
+	.main-background{
+		visibility: hidden;
+	}
+	.main-background-full{
+		visibility: visible;
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		object-position: center;
+		object-fit: cover;
+
 	}
 }
