added politics-container fullscreen

--- a/style.css
+++ b/style.css
@@ -800,6 +800,9 @@ button {
 	margin-bottom: 16px;
 	display: flex;
 }
+.other-options-text:hover{
+		text-decoration: underline;
+}
 .other-options-text-svg {
 	height: 16px;
 	width: 16px;
@@ -836,10 +839,14 @@ button {
 .politics {
 	display: flex;
 	flex-direction: column;
-	margin-bottom: 40px;
+	padding-bottom: 40px;
 }
 .display-none{
 	display: none;
+}
+
+.politics-fullscreen{
+	padding-bottom: 0;
 }
 
 @media (min-width: 1200px){
@@ -1003,6 +1010,32 @@ button {
 	}
 	.fullscreen{
 		flex: 1;
+	}
+	.politics-container{
+		display: flex;
+		text-align: start;
+		padding-top: 40px;
+		border-top: 2px solid #e2e2e2;
+	}
+	.documents-text{
+		margin-left: 40px;
+		height: 20px;
+	}
+	.mini-icons{
+		padding-top: 0;
 		margin-bottom: 0;
+		border-top: none;
+		flex: 1;
+	}
+	.politics{
+		flex-direction: row;
+		padding-bottom: 0;
+		justify-content: flex-end;
+	}
+	.other-options{
+		margin-bottom: 0;
+	}
+	.options-fullscreen{
+		margin-left: 40px;
 	}
 }
