--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ button {
 .navbar {
 	background-color: #e2a257;
 	width: 100%;
+	position: relative;
 }
 .space {
 	padding: 0 16px;
@@ -858,6 +859,11 @@ button {
 	.space{
 		padding: 0 40px;
 	}
+	.navbar{
+		position: fixed;
+		z-index: 50;
+		background-color: unset;
+	}
 	.register{
 		padding: 12px 16px;
 		min-height: 48px;
@@ -896,7 +902,8 @@ button {
 	}
 	.main-content{
 		padding: 0px 40px;
-		top: 290px;
+		top: 365px;
+		height: 100vh;
 	}
 	.text-order{
 		font-size: 52px;
