--- a/style.css
+++ b/style.css
@@ -261,6 +261,9 @@ button {
 	display: flex;
 	align-items: center;
 }
+.delivery-address-input{
+	display: none;
+}
 .delivery-now-text {
 	line-height: 20px;
 	flex-grow: 1;
@@ -298,8 +301,10 @@ button {
 	padding: 12px 16px;
 	min-height: 56px;
 	cursor: pointer;
-	font-family: UberMoveText, system-ui, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	margin-top: 16px;
+}
+.search:hover{
+	background: #333333;
 }
 .or-login {
 	font-weight: 500;
@@ -854,7 +859,18 @@ button {
 .politics-fullscreen{
 	padding-bottom: 0;
 }
+.clear-button{
+		display: none;
+		color: rgb(107, 107, 107);
+		cursor: pointer;
+		font-size: 15px;
+		line-height: 16px;
+		font-weight: 500;
+		margin-left:8px;
+		margin-right: 16px;
 
+		
+}
 
 @media (min-width: 1200px){
 	.name{
@@ -921,6 +937,7 @@ button {
 	}
 	.delivery-address{
 		padding-right: 8px;
+		cursor: default;
 	}
 	.delivery-address-field{
 		padding-left: unset;
@@ -1055,5 +1072,15 @@ button {
 	.navbar-fullscreen{
 		background-color: #ffffff;
 		transition: 0.3s;
+	}
+	.delivery-address-text{
+		display: none;
+	}
+	.delivery-address-input{
+		display: block;
+		outline: none;
+		appearance: none;
+		width: 100%;
+		height: 60%;
 	}
 }
