--- a/style.css
+++ b/style.css
@@ -321,7 +321,7 @@ button {
 	background: rgba(38, 38, 38, 0.8);
 	z-index: 60;
 	width: 100%;
-	height: 400vh;
+	height: 375vh;
 	visibility: hidden;
 }
 
@@ -900,6 +900,12 @@ button {
 	font-size: 16px;
 	white-space: nowrap;
 	font-weight: 500;
+}
+
+.none-fullscreen{
+	display: none;
+	margin-left: 128px;
+	width: 100%;
 }
 
 @media (min-width: 1200px){
