--- a/style.css
+++ b/style.css
@@ -596,7 +596,6 @@ button {
 	line-height: 1;
 }
 .now-bottom-items {
-	background: linear-gradient(rgba(255, 255, 255, 0) 2.5%, rgba(255, 255, 255, 0.92) 55.35%);
 	padding: 0px 16px 32px;
 	right: 0;
 	bottom: 0;
@@ -1125,6 +1124,42 @@ button {
 	}
 	.delivery-now-open{
 		padding: 24px;
-		
+		top:80px;
+		width: 458px;
+		height: 416px;
+		left: unset;
+		z-index: 901;
+		background: #ffffff;
 	}
+	.delivery-now-fullscreen{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	.delivery-address-display{
+		margin-top: 48px;
+	}
+	.now-bottom-items{
+		right: unset;
+		left: unset;
+		bottom: unset;
+		width: 410px;
+	}
+	.now-bottom-container{
+		display: flex;
+		width: 100%;
+		justify-content: center;
+		margin-top: 24px;
+	}
+	.delivery-background {
+		background: rgba(38, 38, 38, 0.8);
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: 90; /* Ustaw wartość indeksu zawsze na wyższą niż elementy, które mają być pod spodem */
+		visibility: hidden;
+	  }
+
 }
