--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ button {
 	width: 100%;
 	position: relative;
 	transition: 0.3s;
-
 }
 .space {
 	padding: 0 16px;
@@ -108,16 +107,24 @@ button {
 	width: 16px;
 	fill: currentColor;
 }
-.login-text{
+.login-text {
 	visibility: hidden;
 	width: 0;
 	font-weight: 500;
 }
-.log-register{
+.log-register {
 	display: flex;
-	position: absolute;
-	right: 0;
+	position: relative;
 	align-items: center;
+	justify-content: flex-end;
+	margin-left: 24px;
+}
+.nav-left-items {
+	display: flex;
+	align-items: center;
+}
+.navbar-containter {
+	justify-content: space-between;
 }
 .register {
 	display: inline-flex;
@@ -135,7 +142,7 @@ button {
 	align-items: center;
 	line-height: 16px;
 }
-.register:hover{
+.register:hover {
 	background-color: #333333;
 }
 .main-background {
@@ -145,7 +152,7 @@ button {
 	right: 0;
 	bottom: 0;
 }
-.main-background-full{
+.main-background-full {
 	display: none;
 }
 .main-content {
@@ -261,7 +268,7 @@ button {
 	display: flex;
 	align-items: center;
 }
-.delivery-address-input{
+.delivery-address-input {
 	display: none;
 }
 .delivery-now-text {
@@ -303,7 +310,7 @@ button {
 	cursor: pointer;
 	margin-top: 16px;
 }
-.search:hover{
+.search:hover {
 	background: #333333;
 }
 .or-login {
@@ -738,16 +745,16 @@ button {
 	font-weight: 500;
 }
 .display-all-cities-asdsadasdsa {
-    display: flex;
-    position: absolute;
-    bottom: 1150px;
-    /* left: 0; */
-    margin-top: 24px;
-    text-decoration: underline;
-    line-height: 20px;
-    font-size: 16px;
-    cursor: pointer;
-    font-weight: 500;
+	display: flex;
+	position: absolute;
+	bottom: 1150px;
+	/* left: 0; */
+	margin-top: 24px;
+	text-decoration: underline;
+	line-height: 20px;
+	font-size: 16px;
+	cursor: pointer;
+	font-weight: 500;
 }
 .country-text {
 	line-height: 32px;
@@ -809,8 +816,8 @@ button {
 	margin-bottom: 16px;
 	display: flex;
 }
-.other-options-text:hover{
-		text-decoration: underline;
+.other-options-text:hover {
+	text-decoration: underline;
 }
 .other-options-text-svg {
 	height: 16px;
@@ -850,32 +857,32 @@ button {
 	flex-direction: column;
 	padding-bottom: 40px;
 }
-.display-none{
+.display-none {
 	display: none;
 }
 
-.politics-fullscreen{
+.politics-fullscreen {
 	padding-bottom: 0;
 }
-.clear-button{
-		display: none;
-		color: rgb(107, 107, 107);
-		cursor: pointer;
-		font-size: 15px;
-		line-height: 16px;
-		font-weight: 500;
-		margin-left:8px;
-		margin-right: 16px;
+.clear-button {
+	display: none;
+	color: rgb(107, 107, 107);
+	cursor: pointer;
+	font-size: 15px;
+	line-height: 16px;
+	font-weight: 500;
+	margin-left: 8px;
+	margin-right: 16px;
 }
-.delivery-now-list-display{
+.delivery-now-list-display {
 	display: none;
 	position: absolute;
-	top:160px;
+	top: 160px;
 	padding: 8px 0px 16px;
 	background: #ffffff;
 	flex-direction: column;
 }
-.list-display-fields{
+.list-display-fields {
 	outline: none;
 	padding: 8px 16px;
 	cursor: pointer;
@@ -883,70 +890,71 @@ button {
 	align-items: center;
 	color: #000000;
 }
-.svg-field{
+.svg-field {
 	height: 32px;
 	width: 32px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
-.svg-field-size{
+.svg-field-size {
 	width: 20px;
 	height: 20px;
 }
-.text-field{
+.text-field {
 	margin-left: 8px;
 	font-size: 16px;
 	white-space: nowrap;
 	font-weight: 500;
 }
 
-.none-fullscreen{
+.none-fullscreen {
 	display: none;
 	margin-left: 128px;
 	width: 100%;
 }
 
-@media (min-width: 1200px){
-	.name{
+@media (min-width: 800px) {
+	.name {
 		height: 24px;
 		width: auto;
 		margin-left: 36px;
 	}
-	.space{
+	.space {
 		padding: 0 40px;
 	}
-	.navbar{
+	.navbar {
 		position: fixed;
 		z-index: 5;
 		background-color: unset;
 	}
-	.register{
+	.register {
 		padding: 12px 16px;
 		min-height: 48px;
 		font-size: 17px;
 		white-space: nowrap;
 		width: auto;
 	}
-	.login{
+	.login {
 		min-height: 48px;
 		font-size: 16px;
 		width: auto;
 		padding: 12px 16px;
+		box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1), 0px 4px 4px rgba(0, 0, 0, 0.04);
 	}
-	.login svg{
+	.login svg {
 		width: 20px;
 		height: 20px;
 	}
-	.login-text{
+	.login-text {
 		margin-left: 4px;
 		visibility: visible;
 		width: auto;
 	}
-	.main-background{
+	.main-background {
 		visibility: hidden;
 	}
-	.main-background-full{
+	.main-background-full {
 		display: block;
 		visibility: visible;
 		width: 100%;
@@ -957,83 +965,81 @@ button {
 		object-position: center;
 		object-fit: cover;
 	}
-	.main-content{
+	.main-content {
 		padding: 0px 40px;
 		top: 365px;
 		height: 100vh;
 	}
-	.text-order{
+	.text-order {
 		font-size: 52px;
 		line-height: 64px;
 		max-width: 60%;
 	}
-	.delivery-address-fixed{
+	.delivery-address-fixed {
 		min-width: 548px;
 	}
-	.delivery-address{
+	.delivery-address {
 		padding-right: 8px;
 		cursor: default;
 	}
-	.delivery-address-field{
+	.delivery-address-field {
 		padding-left: unset;
-		
 	}
-	.delivery-container{
+	.delivery-container {
 		display: flex;
 		max-height: 56px;
 		align-items: center;
 		justify-content: flex-start;
 		margin-top: 40px;
 	}
-	.delivery-now{	
+	.delivery-now {
 		display: inline-flex;
 	}
-	.search{
+	.search {
 		width: auto;
 		margin-top: 0;
 		margin-left: 8px;
 	}
-	.delivery-address-icon{
+	.delivery-address-icon {
 		margin: 16px;
 	}
-	.download-app{
+	.download-app {
 		display: none;
 	}
-	.more-sections{
+	.more-sections {
 		margin-left: 40px;
 		margin-right: 40px;
 	}
-	.services-section{
+	.services-section {
 		padding: 80px 0 0 0;
 		z-index: -3;
 	}
-	.graphics{
+	.graphics {
 		margin-top: 0;
 		margin-left: 0;
 		margin-right: 24px;
 		flex-direction: row;
-		padding-bottom: 120px;	
+		padding-bottom: 120px;
 	}
-	.more-sections-images{
+	.more-sections-images {
 		width: 100%;
-
 	}
-	.more-sections-space{
+	.more-sections-space {
 		margin-top: unset;
 		padding-left: 24px;
 	}
-	.more-sections-text-city{
+	.more-sections-text-city {
 		font-size: 36px;
 		line-height: 36px;
 	}
-	.more-sections-p1{
+	.more-sections-p1 {
 		font-size: 28px;
 		line-height: 36px;
 	}
-	.display-none{
+	.display-none {
 		display: block;
 	}
-	.more-sections-cities{
+	.more-sections-cities {
 		grid-template-columns: repeat(4, 1fr);
 		grid-template-rows: repeat(6, 1fr);
 		gap: 24px;
@@ -1049,7 +1055,7 @@ button {
 		grid-template-rows: repeat(8, 1fr);
 		gap: 24px;
 	}
-	.country-text{
+	.country-text {
 		font-size: 36px;
 		line-height: 44px;
 	}
@@ -1060,92 +1066,92 @@ button {
 		background-color: #ffffff;
 		position: relative;
 	}
-	.footer-imgs-all{
+	.footer-imgs-all {
 		flex: 2;
 		display: flex;
 		align-items: flex-start;
 		justify-content: space-between;
 		flex-direction: column;
 	}
-	.footer-download{
+	.footer-download {
 		margin-bottom: 0;
 	}
-	.footer-container{
+	.footer-container {
 		display: flex;
 		margin-bottom: 40px;
 	}
-	.fullscreen{
+	.fullscreen {
 		flex: 1;
 	}
-	.politics-container{
+	.politics-container {
 		display: flex;
 		text-align: start;
 		padding-top: 40px;
 		border-top: 2px solid #e2e2e2;
 	}
-	.documents-text{
+	.documents-text {
 		margin-left: 40px;
 		height: 20px;
 	}
-	.mini-icons{
+	.mini-icons {
 		padding-top: 0;
 		margin-bottom: 0;
 		border-top: none;
 		flex: 1;
 	}
-	.politics{
+	.politics {
 		flex-direction: row;
 		padding-bottom: 0;
 		justify-content: flex-end;
 	}
-	.other-options{
+	.other-options {
 		margin-bottom: 0;
 	}
-	.options-fullscreen{
+	.options-fullscreen {
 		margin-left: 40px;
 	}
-	.navbar-fullscreen{
+	.navbar-fullscreen {
 		background-color: #ffffff;
 		transition: 0.3s;
 	}
-	.delivery-address-text{
+	.delivery-address-text {
 		display: none;
 	}
-	.delivery-address-input{
+	.delivery-address-input {
 		display: block;
 		outline: none;
 		appearance: none;
 		width: 100%;
 		height: 60%;
 	}
-	.field-focus{
+	.field-focus {
 		box-shadow: rgb(39, 110, 241) 0 -2px 0 inset;
 		transition: 0.3s;
 	}
-	.delivery-now-open{
+	.delivery-now-open {
 		padding: 24px;
-		top:80px;
+		top: 80px;
 		width: 458px;
 		height: 416px;
 		left: unset;
 		z-index: 901;
 		background: #ffffff;
 	}
-	.delivery-now-fullscreen{
+	.delivery-now-fullscreen {
 		display: flex;
 		align-items: center;
 		justify-content: center;
 	}
-	.delivery-address-display{
+	.delivery-address-display {
 		margin-top: 48px;
 	}
-	.now-bottom-items{
+	.now-bottom-items {
 		right: unset;
 		left: unset;
 		bottom: unset;
 		width: 410px;
 	}
-	.now-bottom-container{
+	.now-bottom-container {
 		display: flex;
 		width: 100%;
 		justify-content: center;
@@ -1160,6 +1166,5 @@ button {
 		height: 100%;
 		z-index: 90; /* Ustaw wartość indeksu zawsze na wyższą niż elementy, które mają być pod spodem */
 		visibility: hidden;
-	  }
-
+	}
 }
