--- a/style.css
+++ b/style.css
@@ -81,7 +81,10 @@ button {
 	display: block;
 	cursor: pointer;
 }
-
+.name img{
+	height: 20px;
+	width: auto;
+}
 .login {
 	background-color: #ffffff;
 	white-space: nowrap;
@@ -253,7 +256,6 @@ button {
 	justify-content: center;
 }
 .delivery-now-icon-size {
-	line-height: 1;
 	width: 24px;
 	height: 24px;
 }
@@ -273,6 +275,7 @@ button {
 	font-weight: 500;
 	color: #000000;
 	display: flex;
+	white-space: nowrap;
 }
 .delivery-now-more {
 	margin-left: 4px;
@@ -283,7 +286,6 @@ button {
 	align-items: center;
 }
 .icon-more {
-	line-height: 1;
 	width: 24px;
 	height: 24px;
 }
@@ -511,7 +513,6 @@ button {
 .search-svg-fix {
 	width: 24px;
 	height: 24px;
-	line-height: 1;
 }
 .search-text {
 	padding-left: 16px;
@@ -541,7 +542,6 @@ button {
 .button-close-x-position {
 	width: 24px;
 	height: 24px;
-	line-height: 1;
 }
 .delivery-now-open {
 	display: none;
@@ -593,7 +593,6 @@ button {
 .now-date-icon-fix {
 	width: 24px;
 	width: 24px;
-	line-height: 1;
 }
 .now-bottom-items {
 	padding: 0px 16px 32px;
@@ -619,7 +618,12 @@ button {
 	margin-bottom: 12px;
 	font-weight: 600;
 }
-
+.now-shedule:hover{
+	background: #333333;
+}
+.second-shedule:hover{
+	background: rgb(226, 226, 226) !important;
+}
 .download-app {
 	display: flex;
 	justify-content: center;
@@ -862,7 +866,6 @@ button {
 .delivery-now-list-display {
 	display: none;
 	position: absolute;
-	top: 160px;
 	padding: 8px 0px 16px;
 	background: #ffffff;
 	flex-direction: column;
@@ -904,6 +907,10 @@ button {
 		height: 24px;
 		width: auto;
 		margin-left: 36px;
+	}
+	.name img{
+		height: 24px;
+		width: auto;
 	}
 	.space {
 		padding: 0 40px;
@@ -961,7 +968,9 @@ button {
 		max-width: 62%;
 	}
 	.delivery-address-fixed {
-		min-width: 548px;
+		width: 100%;
+		min-width: 500px;
+		max-width: 548px;
 	}
 	.delivery-address {
 		padding-right: 8px;
@@ -984,6 +993,7 @@ button {
 		width: auto;
 		margin-top: 0;
 		margin-left: 8px;
+		white-space: nowrap;
 	}
 	.delivery-address-icon {
 		margin: 16px;
